# crossroads

./: .clang-format  .copilot  .gitignore  CMakeLists.txt  crossroads.db  main.cpp  workspace.md
.db_backup/: crossroads.db.20260303-143915.bak  crossroads.db.named.json.20260303-143915.bak
docs/adr/: 0001-config-domain-model.md  0002-simulation-core-contract.md  0003-config-simulation-data-exchange.md  0004-scheduler-red-hold-clearance.md  README.md
include/: BasicLightController.hpp  Intersection.hpp  IntersectionConfig.hpp  IntersectionConfigJson.hpp  SafetyChecker.hpp  SimpleHttpUiServer.hpp  SimulatorEngine.hpp  TrafficGenerator.hpp  TrafficLightControllers.hpp  Vehicle.hpp
src/: BasicLightController.cpp  IntersectionConfigJson.cpp  SafetyChecker.cpp  SimpleHttpUiServer.cpp  SimulatorEngine.cpp  TrafficGenerator.cpp  main.cpp
src/db/: Database.cpp  Database.hpp
tests/: test_safety.cpp
web/: config.html  index.html
web/assets/: config.css  index.css
